# touchbase-watcher

./: .env  .env.example  .gitignore  Dockerfile  README.md  config.json.example  docker-compose.yml  pyproject.toml  watch.py
config/: global.json  jobs.json  jobs.json.example
jobs/: default.py  verkooporders.py
modules/: __init__.py
modules/touchbase/: helpers.py
watched_dir/: changeme.csv  raaplijst.csv
